--- a/ui/locales/en/common.json
+++ b/ui/locales/en/common.json
@@ -246,5 +246,9 @@
   "internal-server-error": "Internal Server Error !",
   "unable-to-find": "We're unable to find out what's happening! We suggest you to",
   "try-again-later": "or visit here later.",
-  "multiple-sso-teams": "User belongs to multiple teams with SSO enabled. Please enter your team slug to get started."
+  "multiple-sso-teams": "User belongs to multiple teams with SSO enabled. Please enter your team slug to get started.",
+  "code-ci-cd-deploy": "Code CI/CD Deploy",
+  "infrastructure-deployment": "Infrastructure Deployment",
+  "observability": "Observability",
+  "cost-management": "Cost Management"
 }
