--- a/ui/locales/en/common.json
+++ b/ui/locales/en/common.json
@@ -255,5 +255,26 @@
   "observability-description": "Monitor and observe your systems.",
   "cost-management": "Cost Management",
   "cost-management-description": "Track and optimize your costs.",
-  "security-description": "Manage your team's security settings."
+  "security-description": "Manage your team's security settings.",
+  "cloud-provider": "Cloud Provider",
+  "select-cloud-provider": "Select Cloud Provider",
+  "aws": "AWS",
+  "azure": "Azure",
+  "gcp": "GCP",
+  "template": "Template",
+  "select-template": "Select Deployment Template",
+  "template-1": "Template 1",
+  "template-2": "Template 2",
+  "template-3": "Template 3",
+  "auth": "Authentication",
+  "authenticate-to-cloud-provider": "Authenticate to Cloud Provider",
+  "enter-token": "Enter Token",
+  "authenticate": "Authenticate",
+  "workflow": "GitHub Workflow",
+  "github-workflow-integration": "GitHub Workflow Integration",
+  "enter-github-token": "Enter GitHub Token",
+  "start-deployment": "Start Deployment",
+  "deployment-status": "Deployment Status",
+  "deployment-in-progress": "Deployment in progress...",
+  "refresh-status": "Refresh Status"
 }
